--- a/index.html
+++ b/index.html
@@ -68,11 +68,12 @@
                 <div class="left-cont frame-cont">
                     <div class="left-inside-cont">
                         <div class="about-logo">About me</div>
-                        <div class="about-text">Hi I'm Himanshu Chaudhary, I'm currently pursuing my b.tech with
-                            computer science and engineering from Raj Kumar Goel Institute of Technology, Ghaziabad. I
-                            like to desgin web pages and love to code for backend. I'm a calm and logical person. In my
-                            free time I like to draw something and learn about new technologies.<br><br>I'm always
-                            curious to learn about new things :)</div>
+                        <div class="about-text">Hi I am Himanshu Chaudhary. I am currently pursuing B.Tech
+                            in computer science and engineering at Raj Kumar Goel institute of technology,
+                            Ghaziabad. I'd like to design Web pages and enjoy coding for backend. I am a 
+                            calm and reasonably individual who takes pride in my work. In my free time I 
+                            enjoy art and learning more about technology.
+                            <br><br>  I am always excited to learn new skills to better my future.</div>
                     </div>
                 </div>
 
