--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <div class="top-inside-cont">
                         <div class="profile-pic"></div>
                         <div class="top-title">Hi,<br> I'm Himanshu Chaudhary<br>
-                            <p class="small-text">I'm frontend and backend developer</p>
+                            <p class="small-text">I'm a frontend and backend developer</p>
                         </div>
                     </div>
                 </div>
