--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                             Ghaziabad. I'd like to design Web pages and enjoy coding for backend. I am a 
                             calm and reasonably individual who takes pride in my work. In my free time I 
                             enjoy art and learning more about technology.
-                            <br><br>  I am always excited to learn new skills to better my future.</div>
+                            <br>  I am always excited to learn new skills to better my future.</div>
                     </div>
                 </div>
 
