--- a/index.html
+++ b/index.html
@@ -31,13 +31,18 @@
     <div id="parent">
         <div class="container">
             <div class="frame" id="top">
-                <div class="top-cont frame-cont">
-                    <div class="top-inside-cont">
-                        <div class="profile-pic"></div>
-                        <div class="top-title">Hi,<br> I'm Himanshu Chaudhary<br>
-                            <p class="small-text">I'm a frontend and backend developer</p>
+                <div class="wrapper">
+                    <div class="trans-frame">
+                        <div class="top-cont frame-cont">
+                            <div class="top-inside-cont">
+                                <div class="profile-pic"></div>
+                                <div class="top-title">Hi,<br> I'm Himanshu Chaudhary<br>
+                                    <p class="small-text">I'm a frontend and backend developer</p>
+                                </div>
+                            </div>
                         </div>
                     </div>
+                    <div class="stars-wrap"></div>
                 </div>
             </div>
             <div class="frame" id="down">
