--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="stars-wrap"></div>
+                    <div id="stars"></div>
                 </div>
             </div>
             <div class="frame" id="down">
