--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Himanshu Portfolio</title>
+    <title>Himanshu Profile</title>
     <link rel="stylesheet" href="static/portfolioCss.css">
     <link rel="stylesheet" href="static/animation.css">
     <link rel="stylesheet" href="static/navigator.css">
