update profile pic and skills

--- a/index.html
+++ b/index.html
@@ -73,12 +73,7 @@
                 <div class="left-cont frame-cont">
                     <div class="left-inside-cont">
                         <div class="about-logo">About me</div>
-                        <div class="about-text">Hi I am Himanshu Chaudhary. I am currently pursuing B.Tech
-                            in computer science and engineering at Raj Kumar Goel institute of technology,
-                            Ghaziabad. I'd like to design Web pages and enjoy coding for backend. I am a 
-                            calm and reasonably individual who takes pride in my work. In my free time I 
-                            enjoy art and learning more about technology.
-                            <br>  I am always excited to learn new skills to better my future.</div>
+                        <div class="about-text">I am a developer proficient in both frontend and backend technologies. On the frontend, I create captivating user interfaces, ensuring responsiveness and pixel-perfect design. On the backend, I architect efficient systems. My problem-solving abilities and dedication to clean code make me a valuable asset in delivering innovative solutions, seamlessly connecting user experiences with robust functionality.I am always excited to learn new skills :))</div>
                     </div>
                 </div>
 
@@ -107,15 +102,27 @@
                                 </div>
                             </div>
                             <div class="skill-opt">
-                                <p class="lang">SQL</p>
+                                <p class="lang">Flutter</p>
                                 <div class="progress-bar">
-                                    <div class="indicator" id="sql-bar"></div>
+                                    <div class="indicator" id="flutter-bar"></div>
                                 </div>
                             </div>
                             <div class="skill-opt">
                                 <p class="lang">HTML5/CSS</p>
                                 <div class="progress-bar">
                                     <div class="indicator" id="html-bar"></div>
+                                </div>
+                            </div>
+                            <div class="skill-opt">
+                                <p class="lang">Node.js</p>
+                                <div class="progress-bar">
+                                    <div class="indicator" id="node-bar"></div>
+                                </div>
+                            </div>
+                            <div class="skill-opt">
+                                <p class="lang">MongoDB</p>
+                                <div class="progress-bar">
+                                    <div class="indicator" id="mongo-bar"></div>
                                 </div>
                             </div>
                         </div>
